--- a/apps/api/src/mail/templates/volunteer-enrolled.ejs
+++ b/apps/api/src/mail/templates/volunteer-enrolled.ejs
@@ -1,9 +1,9 @@
 <table style="text-align: center">
-  <h1 style="font-size: 1.4rem">Bonsoir !! 🎇</h1>
+  <h1 style="text-align: center; font-size: 1.4rem">Bonsoir <%= firstname %> !! 🎇</h1>
 
-  <p>Tes disponibilités nous montrent une détermination évidente de ta part pour devenir bénévole sur les 24 heures de l'INSA !</p>
+  <p style="text-align: center">Tes disponibilités nous montrent une détermination évidente de ta part pour devenir bénévole sur les 24 heures de l'INSA !</p>
   
-  <p style="font-size: 1.4rem; font-weight: bold;">✨C'est avec plaizzzir que nous t'accueillons dans la team pour cette 49ème édition, les 17, 18 et 19 mai 2024 ✨</p>
+  <p style="text-align: center; font-size: 1.4rem; font-weight: bold;">✨C'est avec plaizzzir que nous t'accueillons dans la team pour cette 49ème édition, les 17, 18 et 19 mai 2024 ✨</p>
   
   <p>Tu peux maintenant voir que ton profil Overbookd <u style="color: green; font-weight: bold;">a été validé</u>.</p>
   
@@ -20,7 +20,7 @@
   </ul>
   
   <p>Save the date pour le <span style="font-size: 1.4rem">briefing bénévole</span> :</p>
-  <h2>Lundi 13 mai à 18H en amphi Gaston Berger.</h2>
+  <h2 style="text-align: center; font-family: sans-serif">Lundi 13 mai à 18H en amphi Gaston Berger.</h2>
   
   <p>
     C'est la première tâche sur laquelle tu es requis en tant que bénévole, tu dois être présent lors de ce brief !
@@ -29,7 +29,7 @@
   
   <p>On reste disponible si besoin,</p>
   
-  BIENVENUE DANS LA TEAM ! ❤️
+  <p style="text-align: center">BIENVENUE DANS LA TEAM ! ❤️</p>
   
   <p>
     La bise,
@@ -37,4 +37,52 @@
     PS : On te rappelle qu'en tant que bénévole, ta place est offerte !
     Si tu avais déjà acheté un billet, tu peux toujours le revendre sur <a href="https://reelax-tickets.com/e/n/festival-des-24-heures-de-linsa-49eme-edition">relax ticket</a> via le site des 24h.
   </p>
+
+  <p>-----------------------------------------------------------------</p>
+
+  <div style="float:left; margin: 2px 5px 5px 0; padding-right: 5px;" id="photoWrapper">
+    <img src="https://github.com/24HeuresINSA/website24maker/blob/master/public/images/logos/logo_24h_generique_couleur_sf.png?raw=true" width="65px" height="65px" id="sigPhoto">
+  </div>
+  <div style="margin-top:0px; margin-left: 74px;" id="sigDetailsWrapper">
+    <p style="font-family: Helvetica, sans-serif; font-size: 12px; line-height: 14px; color: #333; margin-top:0; margin-left:0; padding-left:0;">
+      <strong>Aglaé, Mathilde et Jayjay</strong>
+      <br>
+      <u>Responsables Bénévoles du Festival des 24h de l'INSA</u>
+    </p>
+    <p style="font-family: Helvetica, sans-serif; font-size: 12px; line-height: 14px; color: rgb(51, 51, 51); margin-top: 0px;" id="sigCompanyWrapper">
+      <strong>
+        <span id="sigCompany">Festival des 24 heures de l'INSA</span>
+      </strong>
+      <br>
+      <span>
+        <a href="www.24heures.org" id="sigWebsite" style="color:#428BCA;" rel="nofollow">www.24heures.org</a>
+      </span>
+      <br>
+      <span id="sigAddress" style="font-size: 10px; line-height: 14px; margin: 5px 0; display:block; opacity:0.8;">20, avenue Albert Einstein 69621 Villeurbanne Cedex</span>
+      <span id="sigAddress" style="font-size: 10px; line-height: 14px; margin: 5px 0; display:block; opacity:0.8;"><a href="tel:+330472437000">04 72 43 70 00</a></span>
+    </p>
+    <p style="font-family: Helvetica, sans-serif; font-size: 12px; line-height: 14px; color: #333;">
+      <span id="facebookIcon" style="display: inline;">
+        <a href="https://www.facebook.com/24heuresinsa/">
+          <img src="https://s3.amazonaws.com/rkjha/signature-maker/icons/facebook_circle_color-20.png" width="20px" height="20px"></a>
+      </span>
+      <span id="instagramIcon" style="display: inline;">
+        <a href="https://www.instagram.com/24heuresinsa/">
+          <img src="https://s3.amazonaws.com/rkjha/signature-maker/icons/instagram_circle_color-20.png" width="20px" height="20px"></a>
+      </span>
+      <span id="youtubeIcon" style="display: inline;">
+        <a href="https://www.youtube.com/channel/UC9Zbc7wBMv2nro0hazcVMFw">
+          <img src="https://s3.amazonaws.com/rkjha/signature-maker/icons/youtube_circle_color-20.png" width="20px" height="20px"></a>
+      </span>
+      <span id="linkedinIcon" style="display: inline;">
+        <a href="https://www.linkedin.com/company/24h-de-l-insa/mycompany/">
+          <img src="https://s3.amazonaws.com/rkjha/signature-maker/icons/linkedin_circle_color-20.png" width="20px" height="20px"></a>
+      </span>
+      <span id="twitterIcon" style="display: inline;">
+        <a href="https://twitter.com/24heuresinsa">
+          <img src="https://s3.amazonaws.com/rkjha/signature-maker/icons/twitter_circle_color-20.png" width="20px" height="20px"></a>
+      </span>
+      <br>
+    </p>
+  </div>
 </table>
