fix: enrolled volunteer template link

--- a/apps/api/src/mail/templates/volunteer-enrolled.ejs
+++ b/apps/api/src/mail/templates/volunteer-enrolled.ejs
@@ -54,9 +54,7 @@
         <span id="sigCompany">Festival des 24 heures de l'INSA</span>
       </strong>
       <br>
-      <span>
-        <a href="www.24heures.org" id="sigWebsite" style="color:#428BCA;" rel="nofollow">www.24heures.org</a>
-      </span>
+      <span>www.24heures.org</span>
       <br>
       <span id="sigAddress" style="font-size: 10px; line-height: 14px; margin: 5px 0; display:block; opacity:0.8;">20, avenue Albert Einstein 69621 Villeurbanne Cedex</span>
       <span id="sigAddress" style="font-size: 10px; line-height: 14px; margin: 5px 0; display:block; opacity:0.8;"><a href="tel:+330472437000">04 72 43 70 00</a></span>
