fix: explain volunteer brief availability. #1736

--- a/apps/api/src/mail/templates/volunteer-enrolled.ejs
+++ b/apps/api/src/mail/templates/volunteer-enrolled.ejs
@@ -2,11 +2,11 @@
   <h1 style="text-align: center; font-size: 1.4rem">Bonsoir <%= firstname %> !! 🎇</h1>
 
   <p style="text-align: center">Tes disponibilités nous montrent une détermination évidente de ta part pour devenir bénévole sur les 24 heures de l'INSA !</p>
-  
+
   <p style="text-align: center; font-size: 1.4rem; font-weight: bold;">✨C'est avec plaizzzir que nous t'accueillons dans la team pour cette 49ème édition, les 17, 18 et 19 mai 2024 ✨</p>
-  
+
   <p>Tu peux maintenant voir que ton profil Overbookd <u style="color: green; font-weight: bold;">a été validé</u>.</p>
-  
+
   <p>Voilà ce qu'il va se passer par la suite :</p>
   <ul>
     <li>
@@ -18,19 +18,21 @@
     <li>Penser à indiquer sur Overbookd si tu souhaites avoir un <strong>planning papier</strong> ou si la <strong>version numérique</strong> te suffit (comme ça moins d'utilisation de papier !).</li>
     <li>Les plannings seront terminés début mai avant le briefing bénévole.</li>
   </ul>
-  
+
   <p>Save the date pour le <span style="font-size: 1.4rem">briefing bénévole</span> :</p>
   <h2 style="text-align: center; font-family: sans-serif">Lundi 13 mai à 18H en amphi Gaston Berger.</h2>
-  
+
   <p>
     C'est la première tâche sur laquelle tu es requis en tant que bénévole, tu dois être présent lors de ce brief !
     C'est à ce moment là que tu recevras le <strong>starter-pack bénévole</strong> et les informations importantes.
+    <br/>
+    On t'as déjà mis les disponibilités, tu auras forcément ce créneau affecté !
   </p>
-  
+
   <p>On reste disponible si besoin,</p>
-  
+
   <p style="text-align: center">BIENVENUE DANS LA TEAM ! ❤️</p>
-  
+
   <p>
     La bise,
     </br>
