fix(ui): add card & adapt style to new theme #2095
Approved-by: Titouan-Joseph CICORELLA <titouanjoseph@gmail.com>
Co-authored-by: 24-bot <dsi@24heures.org>

--- a/apps/web/assets/variables.scss
+++ b/apps/web/assets/variables.scss
@@ -7,7 +7,9 @@ $mobile-max-width: 960px;
 
 $header-height: 70px;
 $mobile-header-height: 55px;
-$footer-height: 34px;
+
+$card-gap: 15px;
+$card-margin: 5px;
 
 $warning-primary: rgb(251, 140, 0);
 $warning-secondary: rgb(251, 140, 0, 0.1);
