--- a/apps/web/assets/font.scss
+++ b/apps/web/assets/font.scss
@@ -2,5 +2,10 @@ h1.page-title {
   font-size: 1.6rem;
   line-height: 1.2;
   font-weight: 600;
-  margin-bottom: 8px;
+  margin-bottom: 10px;
+}
+
+.important {
+  color: red !important;
+  font-weight: bold;
 }
