fix(web): add mobile version & refactor headbar #2097
Approved-by: LucVDH <luke.vandh@gmail.com>

--- a/apps/web/assets/font.scss
+++ b/apps/web/assets/font.scss
@@ -3,6 +3,10 @@ h1.page-title {
   line-height: 1.2;
   font-weight: 600;
   margin-bottom: 10px;
+
+  @media only screen and (max-width: $mobile-max-width) {
+    display: none;
+  }
 }
 
 .important {
