fix(style): adjust global page content size & set default vuetify variables #2093
Approved-by: Marius Deleuil <marius.deleuil@24heures.org>

--- a/apps/web/assets/variables.scss
+++ b/apps/web/assets/variables.scss
@@ -5,8 +5,8 @@
 
 $mobile-max-width: 960px;
 
-$header-height: 70px;
-$mobile-header-height: 60px;
+$header-height: 60px;
+$sidebar-width: 70px;
 
 $card-gap: 15px;
 $card-margin: 5px;
