--- a/apps/web/assets/style.scss
+++ b/apps/web/assets/style.scss
@@ -166,3 +166,29 @@
 .stats-card {
   @include background-color-by-status();
 }
+
+.shift {
+  height: 5px;
+  position: absolute;
+  left: -1px;
+  right: 0;
+  pointer-events: none;
+
+  &.theme--dark {
+    &.shift-night {
+      background-color: beige;
+    }
+  }
+
+  &-party {
+    background-color: purple;
+  }
+
+  &-night {
+    background-color: black;
+  }
+
+  &-day {
+    background-color: darksalmon;
+  }
+}
