fix(rich-editor): replace TipTap by VueQuill #2124
Reviewed-by: Léo Mouyna <mouynaleo@gmail.com>
Reviewed-by: Titouan-Joseph CICORELLA <titouanjoseph@gmail.com>
Approved-by: Léo Mouyna <mouynaleo@gmail.com>

--- a/apps/web/assets/variables.scss
+++ b/apps/web/assets/variables.scss
@@ -11,6 +11,8 @@ $sidebar-width: 70px;
 $card-gap: 15px;
 $card-margin: 5px;
 
+$field-border-radius: 12px; // Default in Vuetify plugin
+
 $warning-primary: rgb(251, 140, 0);
 $warning-secondary: rgb(251, 140, 0, 0.1);
 
