--- a/apps/web/assets/style.scss
+++ b/apps/web/assets/style.scss
@@ -1,12 +1,12 @@
 .desktop-only {
   @media screen and (max-width: $mobile-max-width) {
-    display: none;
+    display: none !important;
   }
 }
 
 .mobile-only {
   @media screen and (min-width: $mobile-max-width) {
-    display: none;
+    display: none !important;
   }
 }
 
