prefeat(calendar): create template of daily calendar #2184
Reviewed-by: Titouan-Joseph CICORELLA <titouanjoseph@gmail.com>
Approved-by: VANDERHAGHEN Luc <luke.vandh@gmail.com>
Approved-by: Titouan-Joseph CICORELLA <titouanjoseph@gmail.com>
Co-authored-by: 24-bot <dsi@24heures.org>

--- a/apps/web/assets/style.scss
+++ b/apps/web/assets/style.scss
@@ -10,6 +10,14 @@
   }
 }
 
+.clickable {
+  cursor: pointer !important;
+}
+
+.unclickable {
+  cursor: default !important;
+}
+
 @mixin background-color-by-status() {
 
   &.validated,
