fix(web): make festival event sidebar scrollable #2208

--- a/apps/web/assets/variables.scss
+++ b/apps/web/assets/variables.scss
@@ -10,6 +10,10 @@ $card-margin: 5px;
 $main-page-border-radius: 25px;
 $field-border-radius: 12px; // Default in Vuetify plugin
 
+$desktop-content-vertical-padding: 15px;
+$desktop-content-horizontal-padding: 25px;
+$mobile-content-padding: 10px;
+
 $warning-primary: rgb(251, 140, 0);
 $warning-secondary: rgb(251, 140, 0, 0.1);
 
