--- a/apps/web/assets/style.scss
+++ b/apps/web/assets/style.scss
@@ -21,6 +21,17 @@
   cursor: default !important;
 }
 
+.vuetify-card {
+  background-color: rgb(var(--v-theme-surface));
+  border-radius: 25px;
+  margin: 5px;
+  padding: 5px;
+  box-shadow:
+    0px 2px 1px -1px var(--v-shadow-key-umbra-opacity, rgba(0, 0, 0, 0.2)),
+    0px 1px 1px 0px var(--v-shadow-key-penumbra-opacity, rgba(0, 0, 0, 0.14)),
+    0px 1px 3px 0px var(--v-shadow-key-ambient-opacity, rgba(0, 0, 0, 0.12));
+}
+
 @mixin background-color-by-status() {
 
   &.validated,
