--- a/apps/web/components/organisms/home-dashboard/home-dashboard.scss
+++ b/apps/web/components/organisms/home-dashboard/home-dashboard.scss
@@ -5,8 +5,29 @@
   width: 25%;
   height: fit-content;
 
+  &__title {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-weight: 500;
+    color: rgb(var(--v-theme-secondary));
+    padding-bottom: 0;
+  }
+  &__content {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+  }
+
   @media only screen and (max-width: $mobile-max-width) {
     min-width: unset;
     width: calc(100% - calc($card-margin * 2));
   }
+}
+
+.no-content-label {
+  font-size: 0.9rem;
+  margin: 5px 10px;
+  opacity: 0.7;
+  text-align: center;
 }
