--- a/apps/web/assets/style.scss
+++ b/apps/web/assets/style.scss
@@ -66,7 +66,8 @@
   }
 
   &.draft,
-  &.not_asking_to_review {
+  &.not_asking_to_review,
+  &.will_not_review {
     background-color: $draft-color;
     color: white;
 
@@ -107,7 +108,8 @@
     }
 
     &.draft,
-    &.not_asking_to_review {
+    &.not_asking_to_review,
+    &.will_not_review {
       border-left: 5px solid $draft-color;
     }
   }
@@ -125,7 +127,8 @@
     }
 
     &.draft,
-    &.not_asking_to_review {
+    &.not_asking_to_review,
+    &.will_not_review {
       color: $draft-color;
     }
 
