feat(availabilities): add calendar to manage other volunteer availabilitites #2367

--- a/apps/web/assets/calendar.scss
+++ b/apps/web/assets/calendar.scss
@@ -1,3 +1,55 @@
 $calendar-radius: 12px;
 $calendar-day-min-width: 80px;
 $hour-height: 45px;
+
+.calendar-grid {
+  display: grid;
+  grid-auto-flow: column;
+  width: 100%;
+  height: 100%;
+
+  &__cell {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    border: 1px solid rgba(var(--v-theme-on-surface), 0.1);
+
+    &:last-child {
+      border-bottom-right-radius: $calendar-radius;
+    }
+  }
+}
+
+.cell-1h {
+  height: $hour-height;
+}
+
+.cell-2h {
+  height: $hour-height * 2;
+}
+
+.unselected {
+  background-color: rgba(var(--v-theme-blue), 0.3);
+  color: rgb(var(--v-theme-on-surface));
+
+  &:hover {
+    background-color: rgba(var(--v-theme-blue), 0.9);
+  }
+}
+
+.selected {
+  background-color: rgba(var(--v-theme-blue), 1);
+  color: white;
+}
+
+
+.validated {
+  background-color: rgb(var(--v-theme-success));
+  color: rgb(var(--v-theme-on-success));
+}
+
+.error {
+  background-color: rgb(var(--v-theme-error));
+  color: rgb(var(--v-theme-on-error));
+}
