style(ft): regrouped the style in homedashboard.scss and change order of the FA component and the FT component on the home page #2342

--- a/apps/web/components/organisms/home-dashboard/home-dashboard.scss
+++ b/apps/web/components/organisms/home-dashboard/home-dashboard.scss
@@ -25,6 +25,12 @@
   }
 }
 
+.content-title {
+  display: flex;
+  gap: 4px;
+  align-items: center;
+}
+
 .no-content-label {
   font-size: 0.9rem;
   margin: 5px 10px;
