feat(web): change status style when side bar is small #2312

--- a/apps/web/assets/style.scss
+++ b/apps/web/assets/style.scss
@@ -146,11 +146,12 @@
 
   #status,
   .status,
+  .name-container,
   #validators,
   #reviewers {
 
     .v-chip,
-    #dot {
+    .dot {
       @include background-color-by-status();
     }
   }
