--- a/apps/web/layouts/navigation/side-nav-list.scss
+++ b/apps/web/layouts/navigation/side-nav-list.scss
@@ -12,7 +12,7 @@ $navigation-item-unfolded-margin-right: 15px;
 }
 
 .navigation-item {
-  border-radius: 10px;
+  border-radius: 10px !important;
   margin: 0 $navigation-item-margin-horizontal;
   transition:
     background-color 0.3s,
