feat(ft): add the component FTHomecard to the homepage #2342
Approved-by: Léon Dumestre <leon.dumestre@gmail.com>
Approved-by: VANDERHAGHEN Luc <luke.vandh@gmail.com>
Co-authored-by: 24-bot <dsi@24heures.org>

Closes #2342

See merge request 24-heures-insa/overbookd-mono!3207

--- a/apps/web/components/organisms/home-dashboard/home-dashboard.scss
+++ b/apps/web/components/organisms/home-dashboard/home-dashboard.scss
@@ -2,7 +2,7 @@
 
 .home-card {
   min-width: 280px;
-  width: 25%;
+  width: 100%;
   height: fit-content;
 
   &__title {
@@ -23,6 +23,12 @@
     min-width: unset;
     width: calc(100% - calc($card-margin * 2));
   }
+}
+
+.content-title {
+  display: flex;
+  gap: 4px;
+  align-items: center;
 }
 
 .no-content-label {
