--- a/apps/web/assets/variables.scss
+++ b/apps/web/assets/variables.scss
@@ -25,7 +25,7 @@ $info-primary: #1976D2;
 $info-secondary: rgb(33, 150, 243, 0.1);
 
 $draft-color: grey;
-$submitted-color: orange;
+$in-review-color: orange;
 $refused-color: rgb(209, 0, 0);
 $validated-color: green;
 $ready-color: rgb(103, 58, 183);
