--- a/apps/web/assets/style.scss
+++ b/apps/web/assets/style.scss
@@ -231,3 +231,25 @@
     background-color: darksalmon;
   }
 }
+
+details {
+  border: 1px solid #aaa;
+  border-radius: $field-border-radius;
+  padding: 0.5em 0.5em 0;
+  min-width: 100%;
+
+  & summary {
+    font-weight: bold;
+    margin: -0.5em -0.5em 0;
+    padding: 0.5em;
+  }
+
+  &[open] {
+    padding: 0.5em;
+
+    & summary {
+      border-bottom: 1px solid #aaa;
+      margin-bottom: 0.5em;
+    }
+  }
+}
