--- a/apps/web/components/organisms/home-dashboard/home-dashboard.scss
+++ b/apps/web/components/organisms/home-dashboard/home-dashboard.scss
@@ -39,7 +39,7 @@
     margin-bottom: 2px;
   }
 
-  @media only screen and (max-width: $mobile-max-width) {
+  @media screen and (max-width: $mobile-max-width) {
     min-width: unset;
     width: calc(100% - calc($card-margin * 2));
   }
