--- a/apps/api/src/mail/templates/festival-activity-validated.ejs
+++ b/apps/api/src/mail/templates/festival-activity-validated.ejs
@@ -14,15 +14,16 @@
     href="<%= statisticsLink %>"
     style="
       background-color: #2196f3;
-      padding: 1rem 1rem 1rem 1rem;
+      padding: 1rem;
       border-radius: 0.5rem;
       color: white;
       text-decoration: none;
       display: inline-block;
-      margin: 1rem;
+      margin: 1rem 1rem 1rem 0;
     "
-    >Aller voir les stats</a
   >
+    Aller voir les stats
+  </a>
   <p>Si le lien ne marche pas, va à cette adresse : <%= statisticsLink %></p>
 
   <p>
