--- a/apps/api/src/mail/templates/festival-task-rejected.ejs
+++ b/apps/api/src/mail/templates/festival-task-rejected.ejs
@@ -1,14 +1,16 @@
 <table style="text-align: center">
   <h1>Rejet d'une Fiche Tâche</h1>
   <p>
-    Attention la FT <strong><%= taskName %></strong>, dont tu es le gestionnaire a été rejetée lors de sa relecture !
+    Attention la FT <strong><%= taskName %></strong>, dont tu es le gestionnaire
+    a été rejetée lors de sa relecture !
     <br />
   </p>
   <p>Eh oui selon <%= rejectorName %>: <q><%= reason %></q></p>
   <h2>
     Il faut la corriger au plus vite ! <br />
     <span style="color: red">
-      N'oublie pas que les FTs sont essentielles pour que le festival se déroule sans encombre
+      N'oublie pas que les FTs sont essentielles pour que le festival se déroule
+      sans encombre
     </span>
   </h2>
   <a
@@ -16,15 +18,16 @@
     href="<%= taskLink %>"
     style="
       background-color: #2196f3;
-      padding: 1rem 1rem 1rem 1rem;
+      padding: 1rem;
       border-radius: 0.5rem;
       color: white;
       text-decoration: none;
       display: inline-block;
-      margin: 1rem;
+      margin: 1rem 1rem 1rem 0;
     "
-    >Aller corriger ma FT</a
   >
+    Aller corriger ma FT
+  </a>
   <p>Si le lien ne marche pas, va à cette adresse : <%= taskLink %></p>
 
   <p>
