--- a/apps/api/src/mail/templates/mail-test.ejs
+++ b/apps/api/src/mail/templates/mail-test.ejs
@@ -1,6 +1,4 @@
-<table style="text-align: center;">
-
-    <p>Bonjour <%= username %> </p>
-    <p>Le service de mail est bien configuré</p>
-
+<table style="text-align: center">
+  <p>Bonjour <%= username %></p>
+  <p>Le service de mail est bien configuré</p>
 </table>
