--- a/apps/api/src/mail/templates/reset-password.ejs
+++ b/apps/api/src/mail/templates/reset-password.ejs
@@ -1,31 +1,30 @@
-<table style="text-align: center;">
-    <p>Salut <%= firstname %></p>
-    <p>Alors comme ça tu as perdu ton mot de passe...</p>
-    <p>
-      Fais gaffe quand meme, la prochaine fois met en un tout simple genre ta date
-      de naissance ou bien écrit le sur un post it que tu colles sur ton pc
-    </p>
-    <a
-      id="link-button"
-      href="<%= resetLink %>"
-      style="
-        background-color: green;
-        padding: 1rem 1rem 1rem 1rem;
-        border-radius: 0.5rem;
-        color: white;
-        text-decoration: none;
-        display: inline-block;
-        margin: 1rem;
-      "
-      >Réinitialiser</a
-    >
-    <p>
-      Si le lien ne marche pas, va a cette adresse :
-        <%= resetLink %>
-    </p>
+<table style="text-align: center">
+  <p>Salut <%= firstname %> !</p>
+  <p>Alors comme ça tu as perdu ton mot de passe...</p>
+  <p>
+    Fais gaffe quand même, la prochaine fois mets-en un tout simple genre ta
+    date de naissance ou bien écris-le sur un post-it que tu colles sur ton PC
+    😉
+  </p>
+  <a
+    id="link-button"
+    href="<%= resetLink %>"
+    style="
+      background-color: #2196f3;
+      padding: 1rem;
+      border-radius: 0.5rem;
+      color: white;
+      text-decoration: none;
+      display: inline-block;
+      margin: 1rem 1rem 1rem 0;
+    "
+  >
+    Réinitialiser mon mot de passe
+  </a>
+  <p>Si le lien ne marche pas, va à cette adresse : <%= resetLink %></p>
 
-    <p>
-      Bisous <br />
-      La Team OB
-    </p>
+  <p>
+    Bisous <br />
+    La Team OB
+  </p>
 </table>
