--- a/apps/api/src/mail/templates/welcome-staff.ejs
+++ b/apps/api/src/mail/templates/welcome-staff.ejs
@@ -16,13 +16,13 @@
     id="link-button"
     href="<%= loginLink %>"
     style="
-      background-color: green;
-      padding: 1rem 1rem 1rem 1rem;
+      background-color: #2196f3;
+      padding: 1rem;
       border-radius: 0.5rem;
       color: white;
       text-decoration: none;
       display: inline-block;
-      margin: 1rem;
+      margin: 1rem 1rem 1rem 0;
     "
   >
     Connexion à Overbookd
