fix: password reset email

--- a/apps/api/src/mail/templates/reset-password.ejs
+++ b/apps/api/src/mail/templates/reset-password.ejs
@@ -2,9 +2,8 @@
   <p>Salut <%= firstname %> !</p>
   <p>Alors comme ça tu as perdu ton mot de passe...</p>
   <p>
-    Fais gaffe quand même, la prochaine fois mets-en un tout simple genre ta
-    date de naissance ou bien écris-le sur un post-it que tu colles sur ton PC
-    😉
+    Essaye de ne pas l'oublier. Tu peux par exemple le mettre dans un
+    gestionnaire de mots de passe 😉
   </p>
   <a
     id="link-button"
