--- a/apps/api/src/mail/templates/welcome-volunteer.ejs
+++ b/apps/api/src/mail/templates/welcome-volunteer.ejs
@@ -10,9 +10,9 @@
   </p>
   <h2>
     N'hésite pas à renseigner tes disponibilités. <br />
-    <span style="color: red"
-      >N'oublie pas que plus de dispo = plus rapidement validé !!</span
-    >
+    <span style="color: red">
+      N'oublie pas que plus de dispo = plus rapidement validé !!
+    </span>
   </h2>
   <a
     id="link-button"
