feat(web): add alt text to images #2563

--- a/apps/api/src/mail/templates/volunteer-enrolled.ejs
+++ b/apps/api/src/mail/templates/volunteer-enrolled.ejs
@@ -43,7 +43,7 @@
   <p>-----------------------------------------------------------------</p>
 
   <div style="float:left; margin: 2px 5px 5px 0; padding-right: 5px;" id="photoWrapper">
-    <img src="https://github.com/24HeuresINSA/website24maker/blob/master/public/images/logos/logo_24h_generique_couleur_sf.png?raw=true" width="65px" height="65px" id="sigPhoto">
+    <img src="https://github.com/24HeuresINSA/website24maker/blob/master/public/images/logos/logo_24h_generique_couleur_sf.png?raw=true" alt="Logo du Club des 24 heures de l'INSA" width="65px" height="65px" id="sigPhoto">
   </div>
   <div style="margin-top:0px; margin-left: 74px;" id="sigDetailsWrapper">
     <p style="font-family: Helvetica, sans-serif; font-size: 12px; line-height: 14px; color: #333; margin-top:0; margin-left:0; padding-left:0;">
@@ -66,23 +66,23 @@
     <p style="font-family: Helvetica, sans-serif; font-size: 12px; line-height: 14px; color: #333;">
       <span id="facebookIcon" style="display: inline;">
         <a href="https://www.facebook.com/24heuresinsa/">
-          <img src="https://s3.amazonaws.com/rkjha/signature-maker/icons/facebook_circle_color-20.png" width="20px" height="20px"></a>
+          <img src="https://s3.amazonaws.com/rkjha/signature-maker/icons/facebook_circle_color-20.png" alt="Logo Facebook" width="20px" height="20px"></a>
       </span>
       <span id="instagramIcon" style="display: inline;">
         <a href="https://www.instagram.com/24heuresinsa/">
-          <img src="https://s3.amazonaws.com/rkjha/signature-maker/icons/instagram_circle_color-20.png" width="20px" height="20px"></a>
+          <img src="https://s3.amazonaws.com/rkjha/signature-maker/icons/instagram_circle_color-20.png" alt="Logo Instagram" width="20px" height="20px"></a>
       </span>
       <span id="youtubeIcon" style="display: inline;">
         <a href="https://www.youtube.com/channel/UC9Zbc7wBMv2nro0hazcVMFw">
-          <img src="https://s3.amazonaws.com/rkjha/signature-maker/icons/youtube_circle_color-20.png" width="20px" height="20px"></a>
+          <img src="https://s3.amazonaws.com/rkjha/signature-maker/icons/youtube_circle_color-20.png" alt="Logo Youtube" width="20px" height="20px"></a>
       </span>
       <span id="linkedinIcon" style="display: inline;">
         <a href="https://www.linkedin.com/company/24h-de-l-insa/mycompany/">
-          <img src="https://s3.amazonaws.com/rkjha/signature-maker/icons/linkedin_circle_color-20.png" width="20px" height="20px"></a>
+          <img src="https://s3.amazonaws.com/rkjha/signature-maker/icons/linkedin_circle_color-20.png" alt="Logo LinkedIn" width="20px" height="20px"></a>
       </span>
       <span id="twitterIcon" style="display: inline;">
         <a href="https://twitter.com/24heuresinsa">
-          <img src="https://s3.amazonaws.com/rkjha/signature-maker/icons/twitter_circle_color-20.png" width="20px" height="20px"></a>
+          <img src="https://s3.amazonaws.com/rkjha/signature-maker/icons/twitter_circle_color-20.png" alt="Logo Twitter" width="20px" height="20px"></a>
       </span>
       <br>
     </p>
