fix: mail admission bénévoles

--- a/apps/api/src/mail/templates/volunteer-enrolled.ejs
+++ b/apps/api/src/mail/templates/volunteer-enrolled.ejs
@@ -3,7 +3,7 @@
 
   <p style="text-align: center">Tes disponibilités témoignent d'une détermination évidente de ta part pour devenir bénévole sur les 24 heures de l'INSA !</p>
 
-  <p style="text-align: center; font-size: 1.4rem; font-weight: bold;">✨C'est avec plaizzzir que nous t'accueillons dans la team pour cette 50ème édition, les 23, 24 et 25 mai 2025 ✨</p>
+  <p style="text-align: center; font-size: 1.4rem; font-weight: bold;">✨C'est avec plaizzzir que nous t'accueillons dans la team pour cette 51ème édition, les 22, 23 et 24 mai 2026 ✨</p>
 
   <p>Tu peux maintenant voir que ton profil Overbookd <u style="color: green; font-weight: bold;">a été validé</u>.</p>
 
@@ -20,10 +20,10 @@
   </ul>
 
   <p>Save the date pour le <span style="font-size: 1.4rem">briefing bénévole</span> :</p>
-  <h2 style="text-align: center; font-family: sans-serif">Lundi 19 mai à 18H en amphi Gaston Berger.</h2>
+  <h2 style="text-align: center; font-family: sans-serif">Lundi 18 mai à 18H en amphi Gaston Berger.</h2>
 
   <p>
-    C'est la première tâche sur laquelle tu es requis en tant que bénévole, tu dois être présent lors de ce brief !
+    C'est souvent la première tâche sur laquelle tu es requis en tant que bénévole, tu dois être présent lors de ce brief !
     C'est à ce moment là que tu recevras le <strong>starter-pack bénévole</strong> et les informations importantes.
     <br/>
     On t'as déjà mis les disponibilités, tu auras forcément ce créneau affecté !
@@ -37,8 +37,8 @@
     La bise,
     </br>
     PS : On te rappelle qu'en tant que bénévole, ta place est offerte !
-    Si tu avais déjà acheté un billet, tu peux toujours le revendre sur <a href="https://reelax-tickets.com/e/n/festival-des-24-heures-de-linsa-50e-edition">relax ticket</a> via le site des 24h.
-  </p>
+    Si tu avais déjà acheté un billet, tu peux toujours le revendre sur <a href="https://www.24heures.org/revendre-un-billet">Shotgun</a> via le site des 24h.
+</p>
 
   <p>-----------------------------------------------------------------</p>
 
@@ -47,7 +47,7 @@
   </div>
   <div style="margin-top:0px; margin-left: 74px;" id="sigDetailsWrapper">
     <p style="font-family: Helvetica, sans-serif; font-size: 12px; line-height: 14px; color: #333; margin-top:0; margin-left:0; padding-left:0;">
-      <strong>Alix, Candice et Gaëlle</strong>
+      <strong>Jade, Margot et Guillaume</strong>
       <br>
       <u>Responsables Bénévoles du Festival des 24h de l'INSA</u>
     </p>
