fix: mail admission bénévoles inclusive

--- a/apps/api/src/mail/templates/volunteer-enrolled.ejs
+++ b/apps/api/src/mail/templates/volunteer-enrolled.ejs
@@ -11,10 +11,10 @@
   <ul>
     <li>
       L'organisation du festival s'accélère ! Maintenant, c'est à nous de jouer pour faire les <u style="font-weight: bold">plannings bénévoles</u>.
-      En attendant, tu peux évidemment toujours <u style="font-weight: bold">rajouter des disponibilités</u> (ce qui nous rendrait encore plus heureux).
+      En attendant, tu peux évidemment toujours <u style="font-weight: bold">rajouter des disponibilités</u> (ce qui nous rendrait encore plus heureux·se).
     </li>
     <li>N'hésite pas à nous tenir au courant dans l'espace <u style="font-weight: bold">commentaire</u> d'une éventuelle précision ou à nous envoyer un <strong>mail</strong> si besoin (<a href="mailto:humain@24heures.org">humain@24heures.org</a>).</li>
-    <li>N'oublie pas de <u style="font-weight: bold">rajouter tes amis</u> pour pouvoir faire des missions avec eux ! Vous les trouverez sur overbookd une fois qu'ils seront également validé.</li>
+    <li>N'oublie pas de <u style="font-weight: bold">rajouter tes ami·e·s</u> pour pouvoir faire des missions avec elleux ! Vous les trouverez sur overbookd une fois qu'iells seront également validé·e·s.</li>
     <li>Pense à indiquer sur Overbookd si tu souhaites avoir un <strong>planning papier</strong> ou si la <strong>version numérique</strong> te suffit (comme ça moins d'utilisation de papier !).</li>
     <li>Les plannings seront terminés début mai avant le briefing bénévole.</li>
   </ul>
@@ -23,7 +23,7 @@
   <h2 style="text-align: center; font-family: sans-serif">Lundi 18 mai à 18H en amphi Gaston Berger.</h2>
 
   <p>
-    C'est souvent la première tâche sur laquelle tu es requis en tant que bénévole, tu dois être présent lors de ce brief !
+    C'est souvent la première tâche sur laquelle tu es requis·e en tant que bénévole, tu dois être présent·e lors de ce brief !
     C'est à ce moment là que tu recevras le <strong>starter-pack bénévole</strong> et les informations importantes.
     <br/>
     On t'as déjà mis les disponibilités, tu auras forcément ce créneau affecté !
