fix: correct formulation in mail

--- a/apps/api/src/mail/templates/volunteer-enrolled.ejs
+++ b/apps/api/src/mail/templates/volunteer-enrolled.ejs
@@ -37,7 +37,7 @@
     La bise,
     </br>
     PS : On te rappelle qu'en tant que bénévole, ta place est offerte !
-    Si tu avais déjà acheté un billet, tu peux toujours le revendre sur <a href="https://www.24heures.org/revendre-un-billet">Shotgun</a> via le site des 24h.
+    Si tu avais déjà acheté un billet, tu peux toujours le revendre <a href="https://www.24heures.org/revendre-un-billet">via le site des 24h</a>.
 </p>
 
   <p>-----------------------------------------------------------------</p>
@@ -53,7 +53,7 @@
     </p>
     <p style="font-family: Helvetica, sans-serif; font-size: 12px; line-height: 14px; color: rgb(51, 51, 51); margin-top: 0px;" id="sigCompanyWrapper">
       <strong>
-        <span id="sigCompany">Festival des 24 heures de l'INSA</span>
+        <span id="sigCompany">Club des 24 heures de l'INSA</span>
       </strong>
       <br>
       <span>
