fix: mail admission bénévoles #2582
Approved-by: Titouan-Joseph CICORELLA <titouanjoseph@gmail.com>
Co-authored-by: LucVDH <luke.vandh@gmail.com>

Closes #2582

See merge request 24-heures-insa/overbookd-mono!3578

--- a/apps/api/src/mail/templates/volunteer-enrolled.ejs
+++ b/apps/api/src/mail/templates/volunteer-enrolled.ejs
@@ -3,7 +3,7 @@
 
   <p style="text-align: center">Tes disponibilités témoignent d'une détermination évidente de ta part pour devenir bénévole sur les 24 heures de l'INSA !</p>
 
-  <p style="text-align: center; font-size: 1.4rem; font-weight: bold;">✨C'est avec plaizzzir que nous t'accueillons dans la team pour cette 50ème édition, les 23, 24 et 25 mai 2025 ✨</p>
+  <p style="text-align: center; font-size: 1.4rem; font-weight: bold;">✨C'est avec plaizzzir que nous t'accueillons dans la team pour cette 51ème édition, les 22, 23 et 24 mai 2026 ✨</p>
 
   <p>Tu peux maintenant voir que ton profil Overbookd <u style="color: green; font-weight: bold;">a été validé</u>.</p>
 
@@ -11,19 +11,19 @@
   <ul>
     <li>
       L'organisation du festival s'accélère ! Maintenant, c'est à nous de jouer pour faire les <u style="font-weight: bold">plannings bénévoles</u>.
-      En attendant, tu peux évidemment toujours <u style="font-weight: bold">rajouter des disponibilités</u> (ce qui nous rendrait encore plus heureux).
+      En attendant, tu peux évidemment toujours <u style="font-weight: bold">rajouter des disponibilités</u> (ce qui nous rendrait encore plus heureux·se).
     </li>
     <li>N'hésite pas à nous tenir au courant dans l'espace <u style="font-weight: bold">commentaire</u> d'une éventuelle précision ou à nous envoyer un <strong>mail</strong> si besoin (<a href="mailto:humain@24heures.org">humain@24heures.org</a>).</li>
-    <li>N'oublie pas de <u style="font-weight: bold">rajouter tes amis</u> pour pouvoir faire des missions avec eux ! Vous les trouverez sur overbookd une fois qu'ils seront également validé.</li>
+    <li>N'oublie pas de <u style="font-weight: bold">rajouter tes ami·e·s</u> pour pouvoir faire des missions avec elleux ! Vous les trouverez sur overbookd une fois qu'iells seront également validé·e·s.</li>
     <li>Pense à indiquer sur Overbookd si tu souhaites avoir un <strong>planning papier</strong> ou si la <strong>version numérique</strong> te suffit (comme ça moins d'utilisation de papier !).</li>
     <li>Les plannings seront terminés début mai avant le briefing bénévole.</li>
   </ul>
 
   <p>Save the date pour le <span style="font-size: 1.4rem">briefing bénévole</span> :</p>
-  <h2 style="text-align: center; font-family: sans-serif">Lundi 19 mai à 18H en amphi Gaston Berger.</h2>
+  <h2 style="text-align: center; font-family: sans-serif">Lundi 18 mai à 18H en amphi Gaston Berger.</h2>
 
   <p>
-    C'est la première tâche sur laquelle tu es requis en tant que bénévole, tu dois être présent lors de ce brief !
+    C'est souvent la première tâche sur laquelle tu es requis·e en tant que bénévole, tu dois être présent·e lors de ce brief !
     C'est à ce moment là que tu recevras le <strong>starter-pack bénévole</strong> et les informations importantes.
     <br/>
     On t'as déjà mis les disponibilités, tu auras forcément ce créneau affecté !
@@ -37,8 +37,8 @@
     La bise,
     </br>
     PS : On te rappelle qu'en tant que bénévole, ta place est offerte !
-    Si tu avais déjà acheté un billet, tu peux toujours le revendre sur <a href="https://reelax-tickets.com/e/n/festival-des-24-heures-de-linsa-50e-edition">relax ticket</a> via le site des 24h.
-  </p>
+    Si tu avais déjà acheté un billet, tu peux toujours le revendre <a href="https://www.24heures.org/revendre-un-billet">via le site des 24h</a>.
+</p>
 
   <p>-----------------------------------------------------------------</p>
 
@@ -47,13 +47,13 @@
   </div>
   <div style="margin-top:0px; margin-left: 74px;" id="sigDetailsWrapper">
     <p style="font-family: Helvetica, sans-serif; font-size: 12px; line-height: 14px; color: #333; margin-top:0; margin-left:0; padding-left:0;">
-      <strong>Alix, Candice et Gaëlle</strong>
+      <strong>Jade, Margot et Guillaume</strong>
       <br>
       <u>Responsables Bénévoles du Festival des 24h de l'INSA</u>
     </p>
     <p style="font-family: Helvetica, sans-serif; font-size: 12px; line-height: 14px; color: rgb(51, 51, 51); margin-top: 0px;" id="sigCompanyWrapper">
       <strong>
-        <span id="sigCompany">Festival des 24 heures de l'INSA</span>
+        <span id="sigCompany">Club des 24 heures de l'INSA</span>
       </strong>
       <br>
       <span>
